Responsive bug on iPhone 7 fixed.

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
-    --background: #97a5a7;
-    --gradient: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,72,142,1) 0%, rgba(128,163,245,1) 100%, rgba(0,212,246,1) 100%, rgba(135,144,246,1) 100%, rgba(141,141,246,1) 100%);
+  --background: #97a5a7;
+  --gradient: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,72,142,1) 0%, rgba(128,163,245,1) 100%, rgba(0,212,246,1) 100%, rgba(135,144,246,1) 100%, rgba(141,141,246,1) 100%);
 }
 
 html, body {
@@ -117,67 +117,67 @@ header nav li a {
 }
 
 .editorial {
-    display: block;
-    width: 100%;
-    height: 60px;
-    max-height: 60px;
-    top:-40px;
-    position: relative;
-    z-index:1;
-    left:0px;
-    float:left;
+  display: block;
+  width: 100%;
+  height: 60px;
+  max-height: 60px;
+  top:-40px;
+  position: relative;
+  z-index:1;
+  left:0px;
+  float:left;
 }
   
 .parallax1 > use {
-    animation: move-forever1 10s linear infinite;
+  animation: move-forever1 10s linear infinite;
 }
   
 .parallax2 > use {
-    animation: move-forever2 8s linear infinite;
+  animation: move-forever2 8s linear infinite;
 }
 
 .parallax3 > use {
-    animation: move-forever3 6s linear infinite;
+  animation: move-forever3 6s linear infinite;
 }
 
 .parallax4 > use {
-    animation: move-forever4 4s linear infinite;
+  animation: move-forever4 4s linear infinite;
 }
 
 @keyframes move-forever1 {
-    0% {
+  0% {
       transform: translate(85px, 0%);
-    }
-    100% {
+  }
+  100% {
       transform: translate(-90px, 0%);
-    }
+  }
 }
   
 @keyframes move-forever2 {
-    0% {
+  0% {
       transform: translate(-90px, 0%);
-    }
-    100% {
+  }
+  100% {
       transform: translate(85px, 0%);
-    }
+  }
 }
 
 @keyframes move-forever3 {
-    0% {
+  0% {
       transform: translate(85px, 0%);
-    }
-    100% {
+  }
+  100% {
       transform: translate(-90px, 0%);
-    }
+  }
 }
 
 @keyframes move-forever4 {
-    0% {
+  0% {
       transform: translate(-90px, 0%);
-    }
-    100% {
+  }
+  100% {
       transform: translate(85px, 0%);
-    }
+  }
 }
 
 .lower-section {
@@ -282,62 +282,64 @@ header nav li a {
 @media (max-width: 1200px) {
   header {
     width: 100%;
+    height: 60px;
   }
 
   header .logo {
-      font-size: 1.5rem;
-      padding: 0 2vw;
+    font-size: 1.5rem;
+    padding: 0 2vw;
   }
 
   .nav-links li a {
-      font-size: 1rem;
+    font-size: 1rem;
   }
 
   .nav-links {
-      position: absolute;
-      z-index: 1000;
-      top: 8vh;
-      right: 100vw;
+    position: absolute;
+    z-index: 1000;
+    top: 8vh;
+    right: 100vw;
       
-      height: 100vh;
-      width: 100vw;
+    height: 100vh;
+    width: 100vw;
 
-      padding: 10px 0;
+    padding: 10px 0;
 
-      display: none;
-      flex-direction: column;
-      align-items: center;
+    display: none;
+    flex-direction: column;
+    align-items: center;
 
-      transform: translateX(100%);
-      transition: transform 0.5s ease-in;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
 
-      background: var(--gradient);
+    background: var(--gradient);
   }
 
   .nav-links li {
-      padding: 20px 0;
+    padding: 20px 0;
   }
 
   .nav-links li a {
-      font-size: 2rem;
+    font-size: 2rem;
   }
 
   .nav-links li:last-child {
-      padding-right: 0;
+    padding-right: 0;
   }
 
   .toggle-menu {
-      display: block;
-      margin-top: 20px;
-      margin-left: 90px;
+    position: absolute;
+    display: block;
+    margin-top: 20px;
+    right: 10px;
   }
 
   .upper-section h1 {
-      text-align: center;
+    text-align: center;
   }
 
   .upper-section p {
-      text-align: center;
+    text-align: center;
   }
 
   .cards {
